--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "vuepress": "^1.9.7",
+    "vuepress-plugin-cursor-effects": "^1.1.4",
     "vuepress-theme-reco": "^1.6.14"
   }
 }
