--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "markdown-it-for-inline": "^0.1.1",
     "vuepress": "^1.9.7",
     "vuepress-plugin-cursor-effects": "^1.1.4",
     "vuepress-theme-reco": "^1.6.14"
