--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "vuepress": "^1.9.7",
     "vuepress-plugin-cursor-effects": "^1.1.4",
     "vuepress-theme-reco": "^1.6.14"
+  },
+  "dependencies": {
+    "markdown-it-disable-url-encode": "^1.0.1",
+    "mdurl": "^1.0.1"
   }
 }
