--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "devDependencies": {
     "copy-webpack-plugin": "^5.0.2",
+    "js-yaml": "^4.1.0",
     "markdown-it-for-inline": "^0.1.1",
     "vuepress": "^1.9.7",
     "vuepress-plugin-cursor-effects": "^1.1.4",
