--- a/docs/view/js/config.yaml
+++ b/docs/view/js/config.yaml
@@ -30,3 +30,9 @@ children:
         path: /view/js/you-not-know-js-1/第二部分—5. 行为委托.md
       - title: 书中方法的模拟实现集.md
         path: /view/js/you-not-know-js-1/书中方法的模拟实现集.md
+  - title: 《你不知道的JS——中》
+    path: /view/js/you-not-know-js-2/
+    collapsable: true
+    children:
+      - title: 第二部分—1. 异步：现在与将来.md
+        path: /view/js/you-not-know-js-2/第二部分—1. 异步：现在与将来.md
