--- a/docs/view/js/config.yaml
+++ b/docs/view/js/config.yaml
@@ -6,33 +6,39 @@ children:
     path: /view/js/you-not-know-js-1/
     collapsable: true
     children:
-      - title: 1. 编译原理.md
+      - title: 1. 编译原理
         path: /view/js/you-not-know-js-1/1. 编译原理.md
-      - title: 2. Eval和With.md
+      - title: 2. Eval和With
         path: /view/js/you-not-know-js-1/2. Eval和With.md
-      - title: 3. 作用域.md
+      - title: 3. 作用域
         path: /view/js/you-not-know-js-1/3. 作用域.md
-      - title: 4. 声明提升.md
+      - title: 4. 声明提升
         path: /view/js/you-not-know-js-1/4. 声明提升.md
-      - title: 5. 闭包.md
+      - title: 5. 闭包
         path: /view/js/you-not-know-js-1/5. 闭包.md
-      - title: 6. 动态作用域与词法作用域.md
+      - title: 6. 动态作用域与词法作用域
         path: /view/js/you-not-know-js-1/6. 动态作用域与词法作用域.md
-      - title: 第二部分—1. this机制.md
+      - title: 第二部分—1. this机制
         path: /view/js/you-not-know-js-1/第二部分—1. this机制.md
-      - title: 第二部分—2. 对象.md
+      - title: 第二部分—2. 对象
         path: /view/js/you-not-know-js-1/第二部分—2. 对象.md
-      - title: 第二部分—3. 混合对象“类”.md
+      - title: 第二部分—3. 混合对象“类”
         path: /view/js/you-not-know-js-1/第二部分—3. 混合对象“类”.md
-      - title: 第二部分—4. 原型.md
+      - title: 第二部分—4. 原型
         path: /view/js/you-not-know-js-1/第二部分—4. 原型.md
-      - title: 第二部分—5. 行为委托.md
+      - title: 第二部分—5. 行为委托
         path: /view/js/you-not-know-js-1/第二部分—5. 行为委托.md
-      - title: 书中方法的模拟实现集.md
+      - title: 书中方法的模拟实现集
         path: /view/js/you-not-know-js-1/书中方法的模拟实现集.md
   - title: 《你不知道的JS——中》
     path: /view/js/you-not-know-js-2/
     collapsable: true
     children:
-      # - title: 第二部分—1. 异步：现在与将来.md
-      #   path: /view/js/you-not-know-js-2/第二部分—1. 异步：现在与将来.md
+      - title: 第二部分—1. 异步：现在与将来
+        path: /view/js/you-not-know-js-2/第二部分—1. 异步：现在与将来.md
+      - title: 第二部分—2. 回调
+        path: /view/js/you-not-know-js-2/第二部分—2. 回调.md
+      - title: 第二部分—3. Promise
+        path: /view/js/you-not-know-js-2/第二部分—3. Promise.md
+      - title: 书中提及的问题的解决方法集
+        path: /view/js/you-not-know-js-2/书中提及的问题的解决方法集.md
