--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@vuepress/plugin-nprogress": "^1.9.10",
     "copy-webpack-plugin": "^5.0.2",
     "js-yaml": "^4.1.0",
     "markdown-it-for-inline": "^0.1.1",
