--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "markdown-it-for-inline": "^0.1.1",
     "vuepress": "^1.9.7",
     "vuepress-plugin-cursor-effects": "^1.1.4",
+    "vuepress-plugin-reading-progress": "^1.0.10",
     "vuepress-theme-reco": "^1.6.14"
   },
   "dependencies": {
